feat: added external API to get dog's pics
