# backend/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\DogController;
 use App\Http\Controllers\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -8,4 +9,12 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-Route::apiResource('products', ProductController::class);
+Route::middleware('auth:sanctum')->group(function() {
+
+    Route::apiResource('products', ProductController::class);
+
+    Route::prefix('partner')->group(function () {
+        Route::get('/dogs', [DogController::class, 'getRandomDogImage']);
+    });
+
+});
